--- a/screen.css
+++ b/screen.css
@@ -11,7 +11,8 @@ html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: medium;
   line-height: normal;
-  background-color: #C5D1D5;
+  background-color: #F5FFFA;
+  padding: 2em;
 }
 
 li {
@@ -24,9 +25,11 @@ li {
 
 nav {
 
-  background-color: #C5D1D5;
+  background-color: #FF4500;
   padding: 0;
   text-align: center;
+
+
 
 
 }
@@ -41,6 +44,7 @@ nav li {
 
 
 
+
 }
 
 nav li:hover {
@@ -50,16 +54,12 @@ nav li:hover {
 
 article {
 
-  background-color: #50585B;
+  background-color: #F8F8FF;
   text-align: center;
 
 }
 
-section {
 
-  background-color: grey;
-
-}
 
 
 
@@ -96,7 +96,19 @@ ul {
 
   text-indent: 2em;
 
+}
+
+section {
+
+  background-color: #F8F8FF;
+  height: 25vw;
+  width: 25vw;
 
 
+}
 
+#content{
+
+  display: flex;
+  flex-flow: row wrap;
 }
