--- a/screen.css
+++ b/screen.css
@@ -52,12 +52,7 @@ nav li:hover {
 }
 
 
-article {
 
-  background-color: #F8F8FF;
-  text-align: center;
-
-}
 
 
 
@@ -66,6 +61,7 @@ article {
 p {
 
   padding-left: 1em;
+
 }
 
 h1 {
@@ -73,6 +69,7 @@ h1 {
   font-size: 2em;
   font-weight: bold;
   text-align: center;
+
 
 }
 
@@ -82,6 +79,7 @@ h2 {
   font-weight: bold;
   background-color: #C17830;
   padding: 0.5em;
+  border-radius: 25px 25px 0px 0px;
 }
 
 h3 {
@@ -101,9 +99,12 @@ ul {
 section {
 
   background-color: #F8F8FF;
-  height: 25vw;
-  width: 25vw;
 
+
+  width: 50%;
+  min-width: 40vw;
+  background-color: blue;
+  border-radius: 25px;
 
 }
 
@@ -111,4 +112,17 @@ section {
 
   display: flex;
   flex-flow: row wrap;
+  padding-top: 25px;
+  justify-content: space-around;
+
+
+
+
+
+}
+
+#resume{
+
+  background-color: green;
+  border-radius: 25px;
 }
