--- a/screen.css
+++ b/screen.css
@@ -121,6 +121,15 @@ section {
   justify-content: space-around;
 }
 
+
+input {
+
+height: 3em;
+width: 98%;
+justify-content: space-around;
+
+}
+
 @media all and (min-width: 800px) {
 
   section {
