--- a/screen.css
+++ b/screen.css
@@ -63,15 +63,9 @@ p {
 
 h2 {
 
-  font-size: 1.5em;
-  font-weight: bold;
-  padding: 0.5em;
-  /*25/16=1.5625 */
 
-  position: absolute;
-  top: 50%
-  left: 50%
-  transform: translate(-50%, -50%);
+
+
 
 
 }
@@ -92,6 +86,16 @@ section {
   text-align: center;
   color: white;
 
+
+}
+
+.intro-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3em;
+  font-weight: bold;
 
 }
 
