--- a/screen.css
+++ b/screen.css
@@ -94,7 +94,7 @@ section {
 
 }
 
-.about-me {
+.intro {
 
   position: relative;
   text-align: center;
@@ -112,6 +112,52 @@ section {
   font-weight: bold;
 
 }
+
+
+.about-me{
+
+  display: grid;
+  grid-template-columns: repeat (3, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+
+
+}
+
+
+.about-me-title {
+
+  text-align: center;
+
+  grid-column: 1/3;
+  grid-row: 1;
+
+
+}
+
+
+
+.aidan-image{
+
+  grid-column: 1;
+  grid-row: 2/5;
+
+
+}
+
+.about-me-text {
+
+
+
+}
+
+
+
+
+
+
+
+
 
 
 
