--- a/screen.css
+++ b/screen.css
@@ -163,7 +163,7 @@ section {
 
 
 
-@media all and (min-width: 800px) {
+@media all and (max-width: 800px) {
 
 
 
@@ -181,13 +181,15 @@ section {
   .aidan-image{
 
     grid-column: 1;
-    grid-row: 1/2;
+    grid-row: 2;
 
 
   }
 
   .about-me-text {
 
+    grid-column: 1;
+    grid-row: 3
 
 
   }
@@ -197,8 +199,5 @@ section {
 
 @media all and (min-width: 600px) {
 
-  section {
-
-
-  }
+  
 }
