Start education HTML elemnt adding and information

--- a/screen.css
+++ b/screen.css
@@ -167,9 +167,31 @@ section {
 
 
 
+.education{
+
+background-color: white;
+display: grid;
+grid-template-columns: repeat (3, 1fr);
+gap: 10px;
+grid-auto-rows: minmax(100px, auto);
+
+}
+
+.education-title{
 
 
 
+}
+
+
+
+.education-image{
+
+
+
+
+
+}
 
 
 
