--- a/screen.css
+++ b/screen.css
@@ -179,6 +179,11 @@ grid-auto-rows: minmax(100px, auto);
 
 .education-title{
 
+  text-align: center;
+  font-size: 3em;
+
+  grid-column: 1/3;
+  grid-row: 1;
 
 
 }
@@ -187,9 +192,29 @@ grid-auto-rows: minmax(100px, auto);
 
 .education-image{
 
+  grid-column: 2;
+  grid-row: 2/5;
 
 
 
+}
+
+.education-text{
+
+  color: black;
+  grid-column: 1;
+  grid-row: 2/4;
+}
+
+
+.education-achievments {
+
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+  grid-column: 1;
+  grid-row: 4;
+  color: black;
 
 }
 
