--- a/screen.css
+++ b/screen.css
@@ -47,7 +47,12 @@ nav li:hover {
   background-color: #963c15;
 }
 
+a{
 
+color: white;
+
+
+}
 
 a:visited{
 
@@ -130,6 +135,7 @@ section {
 
   text-align: center;
   font-size: 3em;
+  color: orange;
 
   grid-column: 1/3;
   grid-row: 1;
@@ -181,6 +187,7 @@ grid-auto-rows: minmax(100px, auto);
 
   text-align: center;
   font-size: 3em;
+  color: orange;
 
   grid-column: 1/3;
   grid-row: 1;
@@ -214,7 +221,67 @@ grid-auto-rows: minmax(100px, auto);
   text-align: center;
   grid-column: 1;
   grid-row: 4;
-  color: black;
+  color: orange;
+
+}
+
+
+
+
+.projects{
+
+  display: grid;
+  grid-template-columns: repeat (3, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+
+
+}
+
+
+
+.projects-title{
+
+  text-align: center;
+  font-size: 3em;
+  color: orange;
+
+  grid-column: 1/3;
+  grid-row: 1;
+
+
+
+}
+
+
+.projects-image{
+
+  grid-column: 1;
+  grid-row: 2/5;
+
+
+}
+
+
+.projects-intro{
+
+  grid-column: 2;
+  grid-row: 2/4;
+
+
+
+}
+
+
+.github-link{
+
+
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+  grid-column: 2;
+  grid-row: 4;
+  color: orange;
 
 }
 
