--- a/screen.css
+++ b/screen.css
@@ -92,14 +92,6 @@ h2 {
 
 
 
-
-
-section {
-
-
-
-}
-
 .intro {
 
   position: relative;
@@ -120,7 +112,7 @@ section {
 }
 
 
-.about-me{
+.homepage-tab{
 
   display: grid;
   grid-template-columns: repeat (3, 1fr);
@@ -131,7 +123,7 @@ section {
 }
 
 
-.about-me-title {
+.title-one{
 
   text-align: center;
   font-size: 3em;
@@ -145,7 +137,7 @@ section {
 
 
 
-.aidan-image {
+.image-one {
 
   grid-column: 1;
   grid-row: 2/5;
@@ -153,7 +145,7 @@ section {
 
 }
 
-.about-me-text {
+.intro-one {
 
   grid-column: 2;
   grid-row: 2/4;
@@ -161,7 +153,7 @@ section {
 }
 
 
-.about-resume {
+.link-one {
 
 
   font-size: 2em;
@@ -173,7 +165,7 @@ section {
 
 
 
-.education{
+#education{
 
 background-color: white;
 display: grid;
@@ -183,7 +175,7 @@ grid-auto-rows: minmax(100px, auto);
 
 }
 
-.education-title{
+.title-two{
 
   text-align: center;
   font-size: 3em;
@@ -197,7 +189,7 @@ grid-auto-rows: minmax(100px, auto);
 
 
 
-.education-image{
+.image-two{
 
   grid-column: 2;
   grid-row: 2/5;
@@ -206,7 +198,7 @@ grid-auto-rows: minmax(100px, auto);
 
 }
 
-.education-text{
+.intro-two{
 
   color: black;
   grid-column: 1;
@@ -214,79 +206,16 @@ grid-auto-rows: minmax(100px, auto);
 }
 
 
-.education-achievments {
+.link-two {
 
   font-size: 2em;
   font-weight: bold;
   text-align: center;
   grid-column: 1;
   grid-row: 4;
-  color: orange;
+  color: black;
 
 }
-
-
-
-
-.projects{
-
-  display: grid;
-  grid-template-columns: repeat (3, 1fr);
-  gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
-
-
-}
-
-
-
-.projects-title{
-
-  text-align: center;
-  font-size: 3em;
-  color: orange;
-
-  grid-column: 1/3;
-  grid-row: 1;
-
-
-
-}
-
-
-.projects-image{
-
-  grid-column: 1;
-  grid-row: 2/5;
-
-
-}
-
-
-.projects-intro{
-
-  grid-column: 2;
-  grid-row: 2/4;
-
-
-
-}
-
-
-.github-link{
-
-
-  font-size: 2em;
-  font-weight: bold;
-  text-align: center;
-  grid-column: 2;
-  grid-row: 4;
-  color: orange;
-
-}
-
-
-
 
 
 
