--- a/screen.css
+++ b/screen.css
@@ -12,8 +12,10 @@ html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: medium;
   line-height: normal;
-  background-color: black;
+  background-color: #121212;
   color: white;
+  font-family: 'Inconsolata', monospace;
+  font-family: 'Roboto Mono', monospace;
 
 }
 
@@ -81,10 +83,7 @@ p {
 
 
 
-h2 {
-
-
-
+main {
 
 
 
@@ -118,7 +117,22 @@ h2 {
   grid-template-columns: repeat (3, 1fr);
   gap: 10px;
   grid-auto-rows: minmax(100px, auto);
+  justify-content: center;
+  padding: 10em;
 
+
+}
+
+
+.homepage-tab-two{
+
+background-color: #FFFAFA;
+display: grid;
+grid-template-columns: repeat (3, 1fr);
+gap: 10px;
+grid-auto-rows: minmax(100px, auto);
+justify-content: center;
+padding: 10em;
 
 }
 
@@ -151,6 +165,8 @@ h2 {
 
   grid-column: 2;
   grid-row: 2;
+  max-width: 30em;
+
 
 }
 
@@ -166,16 +182,6 @@ h2 {
 }
 
 
-
-#education{
-
-background-color: white;
-display: grid;
-grid-template-columns: repeat (3, 1fr);
-gap: 10px;
-grid-auto-rows: minmax(100px, auto);
-
-}
 
 .title-two{
 
@@ -197,7 +203,8 @@ grid-auto-rows: minmax(100px, auto);
   grid-row: 2/5;
 
   max-width: 20em;
-  max-height: auto;
+  max-height: auto
+  ;
 
 
 }
@@ -207,6 +214,7 @@ grid-auto-rows: minmax(100px, auto);
   color: black;
   grid-column: 1;
   grid-row: 2/4;
+  max-width: 30em;
 }
 
 
@@ -223,7 +231,7 @@ grid-auto-rows: minmax(100px, auto);
 
 
 
-@media all and (max-width: 800px) {
+@media all and (max-width: 1150px) {
 
 
 
