--- a/screen.css
+++ b/screen.css
@@ -3,7 +3,140 @@
    License: none (public domain)
 */
 /* stylelint-disable*/
-a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html{line-height:1}body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
+a,
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+q,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section {
+  display: block
+}
+
+html {
+  line-height: 1
+}
+
+body {
+  line-height: inherit
+}
+
+ol,
+ul {
+  list-style: none
+}
+
+blockquote,
+q {
+  quotes: none
+}
+
+blockquote:after,
+blockquote:before,
+q:after,
+q:before {
+  content: '';
+  content: none
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0
+}
+
 /* stylelint-enable */
 
 /* Begin site styles below */
@@ -20,17 +153,17 @@ html {
 }
 
 
-h4{
-    
-    color: gray;
-    font-size: 1.25em;
-    
-    
+h4 {
+
+  color: gray;
+  font-size: 1.25em;
+
+
 }
 
-ul{
+ul {
 
-  list-style-type:circle;
+  list-style-type: circle;
 
 
 
@@ -38,8 +171,8 @@ ul{
 
 li {
 
-  list-style-type:circle;
-    margin: .5em;
+  list-style-type: circle;
+  margin: .5em;
 
 }
 
@@ -47,7 +180,7 @@ nav {
 
   padding: 0;
   text-align: left;
-    overflow: hidden
+  overflow: hidden
 }
 
 nav ul {
@@ -56,15 +189,14 @@ nav ul {
   padding: 0;
 }
 
-nav li{
-    
-    display: inline-block;
-    text-decoration: none;
-    margin: 0
-    
+nav li {
+
+  display: inline-block;
+  text-decoration: none;
+  margin: 0
 }
 
-nav li a{
+nav li a {
 
   display: block;
   text-align: center;
@@ -81,18 +213,19 @@ nav li:hover a {
   background-color: black;
 }
 
-a{
+a {
 
-color: orange;
+  color: orange;
 
 
 }
 
-a:visited{
+a:visited {
 
   text-decoration: none;
   color: orange;
 }
+
 img {
 
   max-width: 100%;
@@ -101,7 +234,7 @@ img {
 
 p {
 
-  
+
   padding-top: 0.625em;
   font-size: 1.75em;
 }
@@ -127,7 +260,7 @@ p {
 }
 
 
-.homepage-tab{
+.homepage-tab {
 
   display: grid;
   grid-template-columns: repeat (3, 1fr);
@@ -138,19 +271,19 @@ p {
 
 }
 
-.homepage-tab-two{
+.homepage-tab-two {
 
-background-color: #FFFAFA;
-display: grid;
-grid-template-columns: repeat (3, 1fr);
-gap: 10px;
-grid-auto-rows: minmax(100px, auto);
-justify-content: center;
-padding: 10em;
+  background-color: #FFFAFA;
+  display: grid;
+  grid-template-columns: repeat (3, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+  justify-content: center;
+  padding: 10em;
 
 }
 
-.title-one{
+.title-one {
 
   text-align: center;
   font-size: 3em;
@@ -196,7 +329,7 @@ padding: 10em;
 
 
 
-.title-two{
+.title-two {
 
   text-align: center;
   font-size: 3em;
@@ -210,19 +343,18 @@ padding: 10em;
 
 
 
-.image-two{
+.image-two {
 
   grid-column: 2;
   grid-row: 2/5;
 
   max-width: 20em;
-  max-height: auto
-  ;
+  max-height: auto;
 
 
 }
 
-.intro-two{
+.intro-two {
 
   color: black;
   grid-column: 1;
@@ -251,11 +383,11 @@ padding: 10em;
 
 
 
-#resume-content{
+#resume-content {
 
   display: grid;
   grid-template-columns: repeat (2, 1fr);
-  
+
   grid-auto-rows: minmax(100px, auto);
   justify-content: center;
   padding: 1em;
@@ -267,12 +399,12 @@ padding: 10em;
 
 
 
-.side-info{
+.side-info {
 
-    grid-column: 1;
-    grid-row: 1/10;
-    font-size: 0.75em;
-    padding: 1em;
+  grid-column: 1;
+  grid-row: 1/10;
+  font-size: 0.75em;
+  padding: 1em;
 
 
 
@@ -280,9 +412,9 @@ padding: 10em;
 }
 
 
-.image-side{
+.image-side {
 
-  
+
 
   max-width: 15em;
   max-height: auto;
@@ -292,7 +424,7 @@ padding: 10em;
 
 
 
-.main-info{
+.main-info {
 
   grid-column: 2;
   background-color: white;
@@ -311,7 +443,7 @@ padding: 10em;
 
 
 
-.resume-main-title{
+.resume-main-title {
 
 
   font-size: 1.5em;
@@ -319,7 +451,7 @@ padding: 10em;
   color: black;
 }
 
-.resume-side-title{
+.resume-side-title {
 
   font-size: 2em;
   font-weight: bold;
@@ -327,27 +459,27 @@ padding: 10em;
 }
 
 
-#skills ul{
+#skills ul {
 
-    display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      grid-gap: 1em;
-      /* Adjust as needed for spacing between bullet points */
-      padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-gap: 1em;
+  /* Adjust as needed for spacing between bullet points */
+  padding: 0;
 
 }
 
-#skills li{
+#skills li {
 
   list-style-type: none;
 }
 
 
 
-#projectsContent p{
+#projectsContent p {
 
   font-size: 1em;
-  
+
 }
 
 #projectsContent h3 {
@@ -357,13 +489,13 @@ padding: 10em;
 
 }
 
-.applications{
+.applications {
 
   background-color: #474747;
   margin: 1em;
   border-radius: .5em;
   padding: .5em;
-  
+
 
 }
 
@@ -371,6 +503,10 @@ padding: 10em;
 .imageSection {
 
   display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 1em;
+  /* Adjust as needed for spacing between bullet points */
+  padding: 0;
 
 
 }
@@ -394,7 +530,8 @@ padding: 10em;
 
 
 
-  .title-one, .title-two {
+  .title-one,
+  .title-two {
 
 
     grid-column: 1/1;
@@ -405,7 +542,8 @@ padding: 10em;
 
 
 
-  .image-one, .image-two{
+  .image-one,
+  .image-two {
 
     grid-column: 1;
     grid-row: 2;
@@ -413,7 +551,8 @@ padding: 10em;
 
   }
 
-  .intro-one, .intro-two {
+  .intro-one,
+  .intro-two {
 
     grid-column: 1;
     grid-row: 3;
@@ -422,7 +561,8 @@ padding: 10em;
   }
 
 
-  .link-one, .link-two {
+  .link-one,
+  .link-two {
 
     grid-column: 1;
     grid-row: 4;
@@ -433,7 +573,4 @@ padding: 10em;
 
 }
 
-@media all and (min-width: 600px) {
-
-
-}
+@media all and (min-width: 600px) {}
