--- a/screen.css
+++ b/screen.css
@@ -387,7 +387,17 @@ font-size: .75em;
 }
 
 
+/* CSS for fade-in effect */
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
 
+.fade-in.active {
+  opacity: 1;
+  transform: translateY(0);
+}
 
 
 
@@ -414,7 +424,7 @@ font-size: .75em;
 .side-info {
 
   grid-column: 1;
-  grid-row: 1/10;
+  grid-row: 1/5;
   font-size: 0.75em;
   padding: 1em;
 
