--- a/screen.css
+++ b/screen.css
@@ -182,7 +182,7 @@ nav {
   text-align: center;
   overflow: hidden;
   border-bottom: 1px solid orange;
-  
+
 }
 
 nav ul {
@@ -245,9 +245,9 @@ p {
 
 footer {
 
-text-align: center;
-padding-left: 1em;
-font-size: .75em;
+  text-align: center;
+  padding-left: 1em;
+  font-size: .75em;
 
 }
 
@@ -408,13 +408,20 @@ font-size: .75em;
 #resume-content {
 
   display: grid;
-  grid-template-columns: repeat (2, 1fr);
+  grid-template-columns: repeat (1, 1fr);
 
   grid-auto-rows: minmax(100px, auto);
   justify-content: center;
   padding: 1em;
 
 
+}
+
+
+#resume-content p {
+
+
+  font-size: 1em;
 }
 
 
@@ -425,7 +432,7 @@ font-size: .75em;
 
   grid-column: 1;
   grid-row: 1/5;
-  font-size: 0.75em;
+  font-size: 1.25em;
   padding: 1em;
 
 
@@ -434,14 +441,19 @@ font-size: .75em;
 }
 
 
-.image-side {
+#aidanPavlikImage {
 
 
 
-  max-width: 15em;
+  max-width: .2em;
   max-height: auto;
 
 
+}
+
+#skills strong {
+
+  font-weight: bold;
 }
 
 
@@ -451,7 +463,7 @@ font-size: .75em;
   grid-column: 2;
   background-color: white;
   color: #474747;
-  font-size: .75em;
+  font-size: 1em;
   padding: 2em;
   border-radius: 1.5em;
   margin: .5em;
@@ -463,9 +475,23 @@ font-size: .75em;
 
 }
 
+
+.main-info h2 {
+
+  font-size: 1.5em;
+  font-weight: bold;
+  color: black;
+}
+
+.main-info h3{
+
+  font-weight: bold;
+
+}
+
 .main-info li {
 
-margin-left: 2.5em;
+  margin-left: 2.5em;
 
 }
 
@@ -502,51 +528,110 @@ margin-left: 2.5em;
   list-style-type: none;
 }
 
-#projectsContent {
+/* Existing styles from screen.css */
 
+/* Modal styles */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+.modal-content,
+#caption {
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+  from {
+    transform: scale(0)
+  }
+
+  to {
+    transform: scale(1)
+  }
+}
+
+@keyframes zoom {
+  from {
+    transform: scale(0.1)
+  }
+
+  to {
+    transform: scale(1)
+  }
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#skills li {
+  list-style-type: none;
+}
+
+#projectsContent {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(40em, 1fr));
-
-
 }
 
 #projectsContent p {
-
   font-size: 1em;
-
 }
 
 #projectsContent h3 {
-
   font-size: 1.5em;
   font-weight: bold;
-
 }
 
 .applications {
-
   background-color: white;
   color: black;
   margin: 1em;
   border-radius: .5em;
   padding: .5em;
   height: fit-content;
-  
-
-
 }
 
-
 .imageSection {
-
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
   grid-gap: 1em;
   /* Adjust as needed for spacing between bullet points */
   padding: 0;
-
-
 }
+
 
 
 
@@ -610,4 +695,18 @@ margin-left: 2.5em;
 
 }
 
-@media all and (min-width: 600px) {}
+
+
+@media (max-width: 900px) {
+  #resume-content {
+      grid-template-columns: 1fr;
+  }
+
+  .side-info {
+      grid-column: 1 / -1;
+  }
+
+  .main-info {
+      grid-column: 1 / -1;
+  }
+}
