Fix broken link and some padding issues

--- a/screen.css
+++ b/screen.css
@@ -625,7 +625,7 @@ footer {
   color: black;
   margin: 1em;
   border-radius: .5em;
-  padding: .5em;
+  padding: 1em;
   height: fit-content;
 }
 
